samples/_failures_safe/1761646847_d8ee4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a73f14dd.c: In function ‘main’:
./samples/SAFE/__tmp_a73f14dd.c:144:5: error: expected expression at end of input
  144 |     if (
      |     ^~
./samples/SAFE/__tmp_a73f14dd.c:144:5: error: expected declaration or statement at end of input
